- Mise à jour du menu Ville. - Mise à jour de la version de l'application.

--- a/GB/App_Lang/Lang.fr.resx
+++ b/GB/App_Lang/Lang.fr.resx
@@ -628,4 +628,7 @@
   <data name="Phone_id" xml:space="preserve">
     <value>Code téléphone</value>
   </data>
+  <data name="Town_management" xml:space="preserve">
+    <value>Gestion des villes</value>
+  </data>
 </root>
