- Ajout du menu gestion des institutions - Mise à jour de la version de l'application

--- a/GB/App_Lang/Lang.fr.resx
+++ b/GB/App_Lang/Lang.fr.resx
@@ -631,4 +631,7 @@
   <data name="Town_management" xml:space="preserve">
     <value>Gestion des villes</value>
   </data>
+  <data name="Economic_activities_management" xml:space="preserve">
+    <value>Gestion des activités économique</value>
+  </data>
 </root>
