--- a/GB/App_Lang/Lang.resx
+++ b/GB/App_Lang/Lang.resx
@@ -630,4 +630,7 @@
   <data name="Town_management" xml:space="preserve">
     <value>Town management</value>
   </data>
+  <data name="Economic_activities_management" xml:space="preserve">
+    <value>Economic activities management</value>
+  </data>
 </root>
