- Intégration du menu Title - Mise à jour de la version de l'application.

--- a/GB/App_Lang/Lang.fr.resx
+++ b/GB/App_Lang/Lang.fr.resx
@@ -634,4 +634,7 @@
   <data name="Economic_activities_management" xml:space="preserve">
     <value>Gestion des activités économique</value>
   </data>
+  <data name="Title_management" xml:space="preserve">
+    <value>Gestion des titres et appélations</value>
+  </data>
 </root>
