- Ajout du menu 'UniteInstitutionnelle'

--- a/GB/App_Lang/Lang.fr.resx
+++ b/GB/App_Lang/Lang.fr.resx
@@ -637,4 +637,7 @@
   <data name="Title_management" xml:space="preserve">
     <value>Gestion des titres et appélations</value>
   </data>
+  <data name="Institutional_unit_management" xml:space="preserve">
+    <value>Institutional unit management</value>
+  </data>
 </root>
