--- a/GB/App_Lang/Lang.resx
+++ b/GB/App_Lang/Lang.resx
@@ -636,4 +636,7 @@
   <data name="Title_management" xml:space="preserve">
     <value>Title management</value>
   </data>
+  <data name="Institutional_unit_management" xml:space="preserve">
+    <value>Institutional unit management</value>
+  </data>
 </root>
