- Mise à jour de la version de l'application. - AJout du menu 'Nationalité BEAC'

--- a/GB/App_Lang/Lang.fr.resx
+++ b/GB/App_Lang/Lang.fr.resx
@@ -640,4 +640,7 @@
   <data name="Institutional_unit_management" xml:space="preserve">
     <value>Institutional unit management</value>
   </data>
+  <data name="BEAC_nationality_management" xml:space="preserve">
+    <value>Gestion des nationalités BEAC</value>
+  </data>
 </root>
