--- a/GB/App_Lang/Lang.resx
+++ b/GB/App_Lang/Lang.resx
@@ -639,4 +639,7 @@
   <data name="Institutional_unit_management" xml:space="preserve">
     <value>Institutional unit management</value>
   </data>
+  <data name="BEAC_nationality_management" xml:space="preserve">
+    <value>BEAC nationality management</value>
+  </data>
 </root>
