--- a/GB/App_Lang/Lang.resx
+++ b/GB/App_Lang/Lang.resx
@@ -696,4 +696,64 @@
   <data name="Signing_authority_management" xml:space="preserve">
     <value>Signing authority management</value>
   </data>
+  <data name="Signing_authority" xml:space="preserve">
+    <value>Signing authority</value>
+  </data>
+  <data name="Begining_period" xml:space="preserve">
+    <value>Begining period</value>
+  </data>
+  <data name="Ending_period" xml:space="preserve">
+    <value>Ending period</value>
+  </data>
+  <data name="Loans_type_management" xml:space="preserve">
+    <value>Loans type management</value>
+  </data>
+  <data name="Periodicity" xml:space="preserve">
+    <value>Periodicity</value>
+  </data>
+  <data name="Quarter" xml:space="preserve">
+    <value>Quarter</value>
+  </data>
+  <data name="Year" xml:space="preserve">
+    <value>Year</value>
+  </data>
+  <data name="Loans_purpose_management" xml:space="preserve">
+    <value>Loans purpose management</value>
+  </data>
+  <data name="Between" xml:space="preserve">
+    <value>Between</value>
+  </data>
+  <data name="Cautioned" xml:space="preserve">
+    <value>Cautioned</value>
+  </data>
+  <data name="End_days" xml:space="preserve">
+    <value>End days</value>
+  </data>
+  <data name="Formula" xml:space="preserve">
+    <value>Formula</value>
+  </data>
+  <data name="Greater_than" xml:space="preserve">
+    <value>Greater than</value>
+  </data>
+  <data name="Loans_provision_classification_management" xml:space="preserve">
+    <value>Loans provision classification management</value>
+  </data>
+  <data name="Mortgage" xml:space="preserve">
+    <value>Mortgage</value>
+  </data>
+  <data name="Percentage" xml:space="preserve">
+    <value>Percentage</value>
+  </data>
+  <data name="Start_days" xml:space="preserve">
+    <value>Start days</value>
+  </data>
+  <data name="Guarantee_type_management" xml:space="preserve">
+    <value>Guarantee type management</value>
+  </data>
+  <data name="Real_safety" xml:space="preserve">
+    <value>Real safety</value>
+  </data>
+  <data name="State_guarantee" xml:space="preserve">
+    <value>State guarantee</value>
+  </data>
 </root>
