--- a/GB/App_Lang/Lang.resx
+++ b/GB/App_Lang/Lang.resx
@@ -759,4 +759,7 @@
   <data name="Journals_recording_management" xml:space="preserve">
     <value>Journals recording management</value>
   </data>
+  <data name="Assets_type_management" xml:space="preserve">
+    <value>Assets type management</value>
+  </data>
 </root>
