--- a/GB/App_Lang/Lang.fr.resx
+++ b/GB/App_Lang/Lang.fr.resx
@@ -772,4 +772,7 @@
   <data name="Western_Union_country_zone_management" xml:space="preserve">
     <value>Gestion des zones de pays Western Union</value>
   </data>
+  <data name="Data_required" xml:space="preserve">
+    <value>Données requises</value>
+  </data>
 </root>
