--- a/GB/App_Lang/Lang.resx
+++ b/GB/App_Lang/Lang.resx
@@ -771,4 +771,7 @@
   <data name="Western_Union_country_zone_management" xml:space="preserve">
     <value>Western Union country zone management</value>
   </data>
+  <data name="Data_required" xml:space="preserve">
+    <value>Data required</value>
+  </data>
 </root>
