--- a/GB/App_Lang/Lang.fr.resx
+++ b/GB/App_Lang/Lang.fr.resx
@@ -775,4 +775,10 @@
   <data name="Data_required" xml:space="preserve">
     <value>Données requises</value>
   </data>
+  <data name="The_session_has_just_ended" xml:space="preserve">
+    <value>La session vient de se terminer</value>
+  </data>
+  <data name="You_will_be_disconnected" xml:space="preserve">
+    <value>Vous serez déconnecté</value>
+  </data>
 </root>
