- Mise à jour de la versio nde l'application. - Mise à jour des autorisations du rôle 2 dans la base de données. - Mise à jour génération automatique signal R sur les combo box referencé

--- a/GB/App_Lang/Lang.fr.resx
+++ b/GB/App_Lang/Lang.fr.resx
@@ -781,4 +781,7 @@
   <data name="You_will_be_disconnected" xml:space="preserve">
     <value>Vous serez déconnecté</value>
   </data>
+  <data name="Fiscals_exercice" xml:space="preserve">
+    <value>Exercices fiscal</value>
+  </data>
 </root>
