--- a/GB/App_Lang/Lang.resx
+++ b/GB/App_Lang/Lang.resx
@@ -828,4 +828,7 @@
   <data name="No_items_have_been_previously_created" xml:space="preserve">
     <value>No items have been previously created</value>
   </data>
+  <data name="Required_field" xml:space="preserve">
+    <value>Required field</value>
+  </data>
 </root>
