--- a/GB/App_Lang/Lang.resx
+++ b/GB/App_Lang/Lang.resx
@@ -831,4 +831,16 @@
   <data name="Required_field" xml:space="preserve">
     <value>Required field</value>
   </data>
+  <data name="Customer_account_to_GL_account" xml:space="preserve">
+    <value>Customer account to GL account</value>
+  </data>
+  <data name="Exempt_general_leger_account" xml:space="preserve">
+    <value>Comptes exemptés du grand livre</value>
+  </data>
+  <data name="GL_account_to_GL_account" xml:space="preserve">
+    <value>GL account to GL account</value>
+  </data>
+  <data name="Operation_type" xml:space="preserve">
+    <value>Operation type</value>
+  </data>
 </root>
