--- a/GB/App_Lang/Lang.resx
+++ b/GB/App_Lang/Lang.resx
@@ -885,4 +885,16 @@
   <data name="Correspondent_bank_account_management" xml:space="preserve">
     <value>Correspondent bank account management</value>
   </data>
+  <data name="Customer_relationship_manager" xml:space="preserve">
+    <value>Customer relationship manager</value>
+  </data>
+  <data name="Guarantor" xml:space="preserve">
+    <value>Guarantor</value>
+  </data>
+  <data name="Guarantor_informations" xml:space="preserve">
+    <value>Guarantor informations</value>
+  </data>
+  <data name="Surname" xml:space="preserve">
+    <value>Surname</value>
+  </data>
 </root>
