--- a/GB/App_Lang/Lang.resx
+++ b/GB/App_Lang/Lang.resx
@@ -927,4 +927,13 @@
   <data name="Treatment_type" xml:space="preserve">
     <value>Treatment type</value>
   </data>
+  <data name="Budget_profit_center_management" xml:space="preserve">
+    <value>Budget profit center management</value>
+  </data>
+  <data name="Control_budget" xml:space="preserve">
+    <value>Control budget</value>
+  </data>
+  <data name="Cost_center" xml:space="preserve">
+    <value>Cost center</value>
+  </data>
 </root>
