- Mise à jour de la version de l'application - Intégration du menu 'expense'

--- a/GB/App_Lang/Lang.resx
+++ b/GB/App_Lang/Lang.resx
@@ -936,4 +936,7 @@
   <data name="Cost_center" xml:space="preserve">
     <value>Cost center</value>
   </data>
+  <data name="Configuring_Budget_lines_for_cost_centers" xml:space="preserve">
+    <value>Configuration des lignes de budget des centres des coûts</value>
+  </data>
 </root>
